<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="topplus.com.glassvrdemo.MeasureResultActivity"
    android:background="@drawable/dark_background"
    >
    <RelativeLayout
        android:id="@+id/page4_top_backimage"
        android:layout_width="340dp"
        android:layout_height="588dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/page4_top_backimage_top_margin"
        android:background="@drawable/page4_top_background">
    <ImageView
        android:id="@+id/page4_user_image"
        android:layout_width="@dimen/page4_user_image_width"
        android:layout_height="@dimen/page4_user_image_height"
        android:layout_marginTop="@dimen/page4_user_image_top_margin"
        android:layout_marginLeft="@dimen/page4_user_image_left_margin"
        android:scaleType="centerCrop"
        />
        <RelativeLayout
            android:id="@+id/page4_left_show_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/page4_left_show_background"
            android:layout_marginLeft="@dimen/page4_left_show_left_margin"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/page4_left_show_bottom_margin"
            >
            <ImageView
                android:id="@+id/page4_left_static_circle"
                android:layout_width="@dimen/page4_progress_circle_width"
                android:layout_height="@dimen/page4_progress_circle_height"
                android:src="@drawable/page4_static_circle"
                android:layout_centerInParent="true"
                />
            <ImageView
                android:id="@+id/page4_left_rotate_circle"
                android:layout_width="@dimen/page4_progress_circle_width"
                android:layout_height="@dimen/page4_progress_circle_height"
                android:layout_centerInParent="true"
                android:src="@drawable/page4_rotate_circle"
                />
            <ImageView
                android:id="@+id/page4_show_bars"
                android:layout_width="@dimen/page4_show_bar_width"
                android:layout_height="@dimen/page4_show_bar_height"
                android:src="@drawable/page4_show_bars"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/page4_pd_key"
            android:layout_toRightOf="@+id/page4_left_show_layout"
            android:layout_alignTop="@+id/page4_left_show_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page4_pd_key"
            android:layout_marginLeft="@dimen/page4_pd_key_left_margin"
            style="@style/page4_key_value_text"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/page4_pd_value"
            android:layout_toRightOf="@id/page4_pd_key"
            android:layout_alignBaseline="@id/page4_pd_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_faceD_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/page4_pd_key"
            android:layout_alignLeft="@+id/page4_pd_key"
            android:layout_marginTop="@dimen/page4_key_inner_margin"
            android:text="@string/page4_faceD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_faceD_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/page4_faceD_key"
            android:layout_alignBaseline="@+id/page4_faceD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_noseD_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/page4_faceD_key"
            android:layout_alignLeft="@+id/page4_faceD_key"
            android:layout_marginTop="@dimen/page4_key_inner_margin"
            android:text="@string/page4_noseD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_noseD_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/page4_noseD_key"
            android:layout_alignBaseline="@+id/page4_noseD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_innerEyeD_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/page4_noseD_key"
            android:layout_alignLeft="@+id/page4_noseD_key"
            android:layout_marginTop="@dimen/page4_key_inner_margin"
            android:text="@string/page4_innerEyeD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_innerEyeD_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/page4_innerEyeD_key"
            android:layout_alignBaseline="@+id/page4_innerEyeD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_outerEyeD_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/page4_innerEyeD_key"
            android:layout_alignLeft="@id/page4_innerEyeD_key"
            android:layout_marginTop="@dimen/page4_key_inner_margin"
            android:text="@string/page4_outerEyeD_key"
            style="@style/page4_key_value_text"
            />
        <TextView
            android:id="@+id/page4_outerEyeD_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/page4_outerEyeD_key"
            android:layout_alignBaseline="@+id/page4_outerEyeD_key"
            style="@style/page4_key_value_text"
            />
        </RelativeLayout>
    <ImageView
        android:id="@+id/page4_bottom_logo"
        android:layout_width="@dimen/page4_logo_width"
        android:layout_height="@dimen/page4_logo_height"
        android:src="@drawable/page4_bottom_logo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/page4_logo_bottom_margin"
        android:layout_marginRight="@dimen/page4_logo_rigth_margin"
        />
</RelativeLayout>
